fixed minor alignment issue

--- a/app/stylesheets/project.css
+++ b/app/stylesheets/project.css
@@ -2,7 +2,6 @@
   width: 100%;
   display: flex;
   align-content: center;
-  align-items: flex-start;
   flex-wrap: wrap;
   justify-content: space-around;
   margin-top: 1vh;
